# EmailAiAssist

./: README.md  auth.config.js  middleware.js  next.config.mjs  package-lock.json  package.json
actions/: approveTasks.js  createCalendarEvent.js  sendReply.js  updateTaskStatus.js
app/: Providers.js  globals.css  layout.js  page.js
app/api/auth/[...nextauth]/: route.js
app/api/autopilot/logs/: route.js
app/api/autopilot/run/: route.js
app/api/emails/: route.js
app/api/emails/process/: route.js
app/api/emails/reply/: route.js
app/api/health/: route.js
app/api/preferences/: route.js
app/autopilot/: page.js
app/calendar/: CalendarClient.js  page.js
app/dashboard/: DashboardClient.js  page.js
app/tasks/: TasksClient.js  page.js
components/: ActionPanel.js  AnimatedBeam.jsx  AutopilotPanel.js  BentoFeatures.jsx  CalendarCard.js  EmailList.js  IntegrationsBeam.jsx  LandingPage.jsx  LogModal.js  Navbar.js  OriginalEmailCard.js  ReplyCard.js  SmoothCursor.js  SmoothCursor.tsx  SummaryCard.js  TaskCard.js  TextAnimate.jsx
components/ui/: BentoGrid.js  FlickeringGrid.jsx  Highlighter.jsx  InteractiveHoverButton.jsx  SpringButton.jsx  button.js  switch.js
emailassist-ai-backend/: main.py  pyproject.toml
lib/: auth.js  calendar.js  gmail.js  mongodb.js
models/: AutopilotLog.js  ProcessedEmail.js  Task.js  User.js  UserPreferences.js
