[project]
name = "auro-university"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "supermemory>=3.30.1",
    "uvicorn>=0.42.0",
]
